[Bug #21331] Prohibit hash modification during stlike loop